# Copyright 2020-2025 David Robillard <d@drobilla.net>
# SPDX-License-Identifier: 0BSD OR GPL-3.0-or-later

option('bindings_py', type: 'feature',
       description: 'Build Python bindings')

option('checks', type: 'boolean', value: true,
       description: 'Check for features with the build system')

option('docs', type: 'feature',
       description: 'Build documentation')

option('gui', type: 'feature',
       description: 'Build GUI')

option('jack', type: 'feature',
       description: 'Build JACK audio and MIDI support')

option('lint', type: 'boolean', value: false,
       description: 'Run code quality checks')

option('lv2dir', type: 'string', value: '',
       description: 'LV2 bundle installation directory')

option('portaudio', type: 'feature',
       description: 'Build PortAudio driver')

option('title', type: 'string', value: 'Ingen',
       description: 'Project title')
